package com.gestaoestoque.enums;

public enum Perfil {
    ADMIN,
    GERENTE,
    OPERADOR
}
