package com.gestaoestoque.enums;

public enum TipoMovimentacao {
    ENTRADA,
    SAIDA,
    AJUSTE
}